--- a/index.html
+++ b/index.html
@@ -6,6 +6,10 @@
     
   </head>
   <body>
-    <h1>first site</h1>
+    <h1>nagy segg</h1>
+	<p>
+	to see page 2 click
+	<A HREF = Page2.HTML>here</A>
+	</p>
   </body>
 </html>
