--- a/index.html
+++ b/index.html
@@ -7,9 +7,10 @@
   </head>
   <body>
     <h1>nagy segg</h1>
+	<h1>kis segg</h1>
 	<p>
 	to see page 2 click
-	<A HREF = Page2.HTML>here</A>
+	<a href="page2.html">here</a>
 	</p>
   </body>
 </html>
