--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     
   </head>
   <body>
-    <h1>nagy segg</h1>
+    <h1>nagyon nagyon nagy segg</h1>
 	<h1>kis segg</h1>
 	<p>
 	to see page 2 click
