--- a/index.html
+++ b/index.html
@@ -2,7 +2,8 @@
 <html>
   <head>
     
-    <title>first test</title>
+    <title>segg univerzum</title>
+		<h1>ez a h1</h1>
     
   </head>
   <body>
