--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@
     
     <title>segg univerzum</title>
 		<h1>ez a h1</h1>
+		<script>
+			document.write("java")
+		</script>
     
   </head>
   <body>
