--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     
     <title>segg univerzum</title>
+	<link rel="stylesheet" type="text/css" href="style.css" />
 		<h1>ez a h1</h1>
 		<script>
 			document.write("java")
