--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 		<script>
 			document.write("java")
 		</script>
+		<link rel="stylesheet" type="text/css" href="style.css" />
     
   </head>
   <body>
