--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <body>
     <h1>nagyon nagyon nagy segg</h1>
 	<h1>kis segg</h1>
-	<img src="Kuno/honda.jpg">
+	<img src="Kuno/bendi2.jpg">
 	<p>
 	to see page 2 click
 	<a href="page2.html">here</a>
