--- a/index.html
+++ b/index.html
@@ -2,7 +2,8 @@
 <html>
   <head>
     <title>segg univerzum</title>
-		<h1>ez a h1</h1>
+		<h1>My webpage about segg's</h1>
+		<hr/>
 		<link rel="stylesheet" type="text/css" href="style.css" />
 		<script>
 			document.write("java")
