--- a/index.html
+++ b/index.html
@@ -10,9 +10,10 @@
 		</script> 
   </head>
   <body>
+  <div id="header">
     <h1>nagyon nagyon nagy segg</h1>
 	<h1>kis segg</h1>
-	<img src="Kuno/bendi2.jpg">
+	<img src="bendi2.jpg">
 	<p>
 	to see page 2 click
 	<a href="page2.html">here</a>
