--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <title>segg univerzum</title>
 		<h1>My webpage about segg's</h1>
+		<div id="cim">
 		<link rel="stylesheet" type="text/css" href="style.css" />
 		<hr/>
 		<script>
