--- a/index.html
+++ b/index.html
@@ -1,8 +1,11 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>segg univerzum</title>
+	
+	<title>segg univerzum</title>
+		<div id="focim">
 		<h1>My webpage about segg's</h1>
+		</div>
 		<div id="cim">
 		<link rel="stylesheet" type="text/css" href="style.css" />
 		<hr/>
