--- a/index.html
+++ b/index.html
@@ -22,5 +22,19 @@
 	to see page 2 click
 	<a href="page2.html">here</a>
 	</p>
+	<p>
+	
+		<video width="320" height="240" controls>
+			<source src="elsoketto.mp4" type="video/mp4">
+			<source src="movie.ogg" type="video/ogg">
+
+		</video>
+	</p>
   </body>
 </html>
+
+
+
+
+
+
