--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 		<link rel="stylesheet" type="text/css" href="style.css" />
 		<hr/>
 		<script>
-			document.write("java")
+			document.write("javascriptben programozas")
 		</script> 
   </head>
   <body>
@@ -23,11 +23,11 @@
 	<a href="page2.html">here</a>
 	</p>
 	<p>
-	
+	<div id="video">
 		<video width="320" height="240" controls>
 			<source src="elsoketto.mp4" type="video/mp4">
 			<source src="movie.ogg" type="video/ogg">
-
+	</div>
 		</video>
 	</p>
   </body>
